k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asdf-test-staging
  namespace: colossus-514d2755-6803-4c29-9-staging
  labels:
    app: asdf-test-staging
    managed-by: colossus
spec:
  type: ClusterIP
  selector:
    app: asdf-test-staging
  ports:
    - port: 80
      targetPort: 3000
